<resources>

    // App related
    <string name="app_name">Togethere</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="textview">TextView</string>

    // Map
    <string name="title_activity_maps">Map</string>
    <string name="confirmPin">Choisir un point de rencontre</string>
    <string name="title_activity_api_call">ApiCall</string>

    // LoginActivity
    <string name="title_activity_login">Sign in</string>
    <string name="action_sign_in">S\'inscrire</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="id_login">Mail ou tel</string>
    <string name="user_login">Pseudo</string>

    // LoginMessage
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be more than 5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="welcome">"Welcome !"</string>

    // HourFixActivity
    <string name="choose_hour">"Fixez l'horaire du "</string>
    <string name="hint_hour">". . ."</string>
    <string name="rdv_hour">"Rendez-vous"</string>
    <string name="confirm_rdv_hour">"Confirmez le rendez-vous"</string>
    <string name="between_hour">" / "</string>

    // Trip
    <string name="hint_text_trip">. . .</string>
    <string name="text_trip">Name</string>
    <string name="button_trip">Cliquer</string>
    <string name="title_activity_group_trip">Map</string>
    <string name="confirm_participants">Confirmer le choix des participants</string>
    <string name="addNewPerson">Ajouter une nouvelle personne</string>

    // Fragment Choose Place
    <string name="where_to_go">On va où ?</string>
    <string name="rendez_vous_list">Vos rendez-vous</string>
    <string name="favorites">Favoris</string>

    //API Call
    <string name="durationTitle">Temps de trajet (en minutes)</string>


</resources>
