<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HourFixActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_hour"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toStartOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rdv_hour"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/min_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/month_text"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/day_text"
        android:layout_width="31dp"
        android:layout_height="26dp"
        android:layout_marginStart="32dp"
        android:background="@android:color/transparent"
        android:hint="@string/hint_text_trip"
        android:inputType="date"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="@+id/textView4"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/month_text"
        android:layout_width="31dp"
        android:layout_height="26dp"
        android:layout_marginStart="8dp"
        android:background="@android:color/transparent"
        android:hint="@string/hint_hour"
        android:inputType="date"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        tools:layout_editor_absoluteY="154dp" />

    <EditText
        android:id="@+id/hour_text"
        android:layout_width="31dp"
        android:layout_height="26dp"
        android:layout_marginEnd="8dp"
        android:background="@android:color/transparent"
        android:hint="@string/hint_hour"
        android:inputType="date"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        app:layout_constraintEnd_toStartOf="@+id/textView5"
        tools:layout_editor_absoluteY="154dp" />

    <EditText
        android:id="@+id/min_text"
        android:layout_width="31dp"
        android:layout_height="26dp"
        android:layout_marginEnd="32dp"
        android:background="@android:color/transparent"
        android:hint="@string/hint_hour"
        android:inputType="date"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnConfirmRdv"
        android:layout_width="327dp"
        android:layout_height="50dp"
        android:layout_marginBottom="24dp"
        android:text="@string/confirm_rdv_hour"
        android:background="@drawable/button"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="45dp"
        android:layout_height="26dp"
        android:layout_marginStart="8dp"
        android:hint="@string/between_hour"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="@+id/month_text"
        app:layout_constraintStart_toEndOf="@+id/day_text" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="45dp"
        android:layout_height="26dp"
        android:layout_marginEnd="8dp"
        android:text="h"
        android:textSize="50sp"
        app:layout_constraintEnd_toStartOf="@+id/min_text"
        tools:layout_editor_absoluteY="154dp" />


</androidx.constraintlayout.widget.ConstraintLayout>