<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.CustomFragment">

    <Button
        android:id="@+id/btnStartSearchPlace"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/button"
        android:fontFamily="@font/quicksand_medium"
        android:text="@string/where_to_go"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnMenuRdv"
        android:layout_width="159.5dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:textColor="#FFFFFF"
        android:text="@string/rendez_vous_list"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnStartSearchPlace" />

    <Button
        android:id="@+id/btnMenuFavoris"
        android:layout_width="159.5dp"
        android:layout_height="wrap_content"
        android:background="@drawable/buttoninverse"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:textColor="@color/colorPrimary"
        android:text="@string/favorites"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnStartSearchPlace" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/contactRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnMenuRdv" />

</androidx.constraintlayout.widget.ConstraintLayout>

